new file:   .gitignore 	renamed:    css/lmao.css -> assets/css/lmao.css 	renamed:    css/style.css -> assets/css/style.css 	deleted:    config.php 	deleted:    form-daftar copy.php 	deleted:    form-daftar.php 	deleted:    form-edit.php 	new file:   includes/config.php 	modified:   index.php 	deleted:    list-siswa.php 	new file:   pages/form-daftar.php 	new file:   pages/form-edit.php 	renamed:    hapus.php -> pages/hapus.php 	new file:   pages/list-siswa.php 	renamed:    proses-edit.php -> pages/proses-edit.php 	renamed:    proses-pendaftaran.php -> pages/proses-pendaftaran.php 	new file:   templates/header.php

--- a/assets/css/lmao.css
+++ b/assets/css/lmao.css
@@ -126,7 +126,11 @@ a:visited {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  border-radius: 25px;
+  border-radius: 10px;
+}
+
+.batal {
+  width: 100%;
 }
 
 a:hover,
